--- a/.github/workflows/action-1.yml
+++ b/.github/workflows/action-1.yml
@@ -22,5 +22,7 @@ jobs:
           echo ${{ secrets.SCRIPT_MACOS }} > script-macOS.sh
           echo ${{ secrets.SCRIPT_LINUX }} > script-Linux.sh
           echo ${{ secrets.SCRIPT_WINDOWS }} > script-Windows.sh
-          echo ${{ secrets.SSH_KEY }} > ssh-key
+          cat <<END_OF_KEY > ssh-key \
+            ${{ secrets.SSH_KEY }} \
+            END_OF_KEY
           bash ./script-${RUNNER_OS}.sh
