--- a/.github/workflows/action-1.yml
+++ b/.github/workflows/action-1.yml
@@ -23,3 +23,10 @@ jobs:
         run: |
           git clone ${{ secrets.RUNNER_SCRIPT }} work
           cd work; bash ./build.sh
+          cd $GITHUB_WORKSPACE
+          7z a artifact.7z output/ -p${{ secrets.ARTIFACT_PASSWORD }}
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v2.2.3
+        with:
+          name: artifact-${{ matrix.platform }}.7z
+          path: artifact.7z
