--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,9 +7,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+
+    - name: Install Host Qt
+      uses: jurplel/install-qt-action@v2.13.2
+      with:
+        version: 6.2.0
+        aqtversion: ==1.2.0 # optional, default is ==1.1.3
+        set-env: false
+
     - name: Install Qt
-      # You may pin to the exact commit or the version.
-      # uses: jurplel/install-qt-action@a10f4d43af43348aab618414b68a9d32cb008977
       uses: jurplel/install-qt-action@v2.13.2
       with:
         version: 6.2.0
