--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         build_type: [Debug, Release]
         os: [windows-latest, ubuntu-latest, macos-latest]
-        qtversion: [6.2.0, 6.1.0]
+        qtversion: [6.2.0, 6.1.2, 6.0.4]
 
     steps:
     - uses: actions/checkout@v2
